add general setting, update dahshboard, fix page title

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,4 +1,10 @@
 {
     "Settings": "Settings",
+    "General": "General",
+    "Site Title": "Site Title",
+    "Tagline": "Tagline",
+    "Site URL": "Site URL",
+    "Admin Email": "Admin Email",
+    "Timezone": "Timezone",
     "Log Out": "Log Out"
 }
