--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -6,5 +6,7 @@
     "Site URL": "Site URL",
     "Admin Email": "Admin Email",
     "Timezone": "Timezone",
-    "Log Out": "Log Out"
+    "Log Out": "Log Out",
+    "Add New Page": "Add New Page",
+    "Edit Page": "Edit Page"
 }
